Reconstructing some URLs. Additional validation implemented.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,17 @@
+NotEmpty.user.username=Username can not be blank.
 NotEmpty.user.firstName=First name can not be blank.
-NotEmpty.user.lastName=Last name can not be blank.
+NotEmpty.user.secondName=Last name can not be blank.
 NotEmpty.user.email=Email can not be blank.
-NotEmpty.user.ssoId=SSO ID can not be blank.
-non.unique.ssoId=SSO ID {0} already exist. Please fill in different value.
+NotEmpty.user.password=Password can not be blank
+NotNull.user.age=Please type in age
+NotNull.user.gender=Please select gender
+NotNull.user.birthday=Please type in the birthday
+Email.user.email=Please type a valid email address
+
 missing.file= Please select a file.
 document-name.duplicate = Name already in use. Please select another name.
+user.username.duplicate=Username already in use.Please select another username.
+NotEmpty.course.courseName=Name of the course cannot be empty. Please type a name of the course.
+course.courseName.duplicate=Name of the course already exists. Please select another name of the course.
+NotEmpty.lesson.title=Name of the lesson cannot be empty. Please type a name of the lesson.
+lesson.title.duplicate=Name of the lesson already exists. Please type another name of the lesson.
